# lab6

./: CMakeLists.txt
.github/workflows/: deb.yml  main.yml  msi.yml
